# polymarket-execution-suite

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CANARY_DECISION_PREP_AUDIT.md  CANARY_GO_NO_GO_REVIEW.md  CANARY_PRODUCTION_ROADMAP.md  COMPONENT_COMPATIBILITY.md  CONTRIBUTING.md  CONTROLLED_CANARY_CLOSEOUT.md  CURRENT_PROGRESS.md  DEPENDENCY_POLICY.md  DESIGN_DECISION_RECORD.md  DEVELOPMENT_HANDOFF.md  DOC_STATUS.md  IMPLEMENTATION_STATUS.md  Makefile  NO_LOCAL_ACTIONS_REMAINING.md  OFFLINE_INDEPENDENT_REVIEW_MANUAL.md  PROJECT_ARCHITECTURE.md  README.md  RELEASE_DECISION.md  REVIEW_AUDIT.md  ROADMAP.md  SECURITY.md  SECURITY_MODEL.md  TASKS.md  VALIDATION_PROMOTION.md  VALIDATION_REPORT.md  constraints-ci.txt  requirements-ci.txt
.github/: CODEOWNERS  PUBLISHING_CHECKLIST.md  dependabot.yml  pull_request_template.md
hermes-polymarket-control/: AGENTS.md  README.md  pyproject.toml
hermes-polymarket-control/docs/: ARCHITECTURE.md  PROGRESS.md  REVIEW.md  ROADMAP.md  SECURITY_BOUNDARIES.md
hermes-polymarket-control/src/hermes_polymarket_control/: __init__.py  cli.py  client.py  config.py  models.py  tools.py
hermes-polymarket-control/tests/: test_client.py  test_models.py
polymarket-execution-engine/: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  rust-toolchain.toml
polymarket-execution-engine/adapters/: AGENTS.md
polymarket-execution-engine/adapters/pmx-official-sdk-adapter/: Cargo.toml
polymarket-execution-engine/adapters/pmx-official-sdk-adapter/src/: lib.rs
polymarket-execution-engine/adapters/pmx-official-sdk-spike/: Cargo.toml
polymarket-execution-engine/adapters/pmx-official-sdk-spike/src/: lib.rs
polymarket-execution-engine/crates/: AGENTS.md
polymarket-execution-engine/crates/pmx-api/: AGENTS.md  Cargo.toml
polymarket-execution-engine/crates/pmx-api/src/: lib.rs  main.rs
polymarket-execution-engine/crates/pmx-api/tests/: http_and_fake_e2e.rs  http_postgres_e2e.rs
polymarket-execution-engine/crates/pmx-authz/: AGENTS.md  Cargo.toml
polymarket-execution-engine/crates/pmx-authz/src/: lib.rs
polymarket-execution-engine/crates/pmx-core/: AGENTS.md  Cargo.toml
polymarket-execution-engine/crates/pmx-core/src/: lib.rs
polymarket-execution-engine/crates/pmx-gateway/: AGENTS.md  Cargo.toml
polymarket-execution-engine/crates/pmx-gateway/src/: lib.rs
polymarket-execution-engine/crates/pmx-policy/: AGENTS.md  Cargo.toml
polymarket-execution-engine/crates/pmx-policy/src/: lib.rs
polymarket-execution-engine/crates/pmx-release/: AGENTS.md  Cargo.toml
polymarket-execution-engine/crates/pmx-release/src/: lib.rs
polymarket-execution-engine/crates/pmx-runtime/: AGENTS.md  Cargo.toml
polymarket-execution-engine/crates/pmx-runtime/src/: lib.rs
polymarket-execution-engine/crates/pmx-service/: AGENTS.md  Cargo.toml
polymarket-execution-engine/crates/pmx-service/src/: lib.rs
polymarket-execution-engine/crates/pmx-store/: AGENTS.md  Cargo.toml
polymarket-execution-engine/crates/pmx-store/src/: lib.rs  postgres.rs
polymarket-execution-engine/docs/: ADMIN_AUDIT_FAILURE_PATHS.md  ADMIN_AUDIT_PERSISTENCE.md  ARCHITECTURE.md  ATTACK_DEFENSE.md  AUTHENTICATED_NON_TRADING_SMOKE.md  BLOCKED_SUBMIT_LIFECYCLE.md  CANCEL_RECONCILE_STATE_MACHINE_NEXT.md  DOC_STATUS.md  LIVE_SUBMIT_STATIC_GUARD.md  LOW_RESOURCE_VALIDATION.md  NEXT_EXTERNAL_GATES.md  OFFICIAL_SDK_ADAPTER_BOUNDARY.md  OFFICIAL_SDK_INTEGRATION.md  PG_CONCURRENCY_MODEL.md  PLAN_STORAGE_CANONICALIZATION.md  POSTGRES_BACKED_API_E2E.md  POSTGRES_RUNTIME_PROVIDER.md  REAL_ADAPTER_DECISION.md  RELEASE_HYGIENE_CLEAN_SNAPSHOT.md  REPOSITORY_CONCURRENCY_PROOF.md  REVIEW.md  ROADMAP.md  RUNTIME_WORKER_MODEL.md  RUNTIME_WORKER_STORE_WRITER.md  SDK_FIRST_ADAPTER_PLAN.md  SDK_MAPPING_AND_LIVENESS.md  SDK_SOURCE_EVIDENCE.md  SDK_SPIKE_PLAN.md  SECURITY_BOUNDARIES.md  SERVER_AUTHORITY_ID_BOUND_API.md  SIGNED_PAYLOAD_REDACTION.md  SIGN_ONLY_DRY_RUN.md  SIGN_ONLY_LIFECYCLE_PERSISTENCE.md  SIGN_ONLY_LIFECYCLE_POSTGRES.md  STATE_MACHINE.md  STATIC_RUNTIME_PROVIDER.md  TESTING_STRATEGY.md  V0_23_SOURCE_CANDIDATE.md  VALIDATION_EVIDENCE.md  VALIDATION_PARTITIONING.md
polymarket-execution-engine/evidence/current/: manifest.json
polymarket-execution-engine/migrations/: 0001_initial.sql  AGENTS.md
polymarket-execution-engine/openapi/: AGENTS.md  executor.v1.yaml
polymarket-execution-engine/release/: manifest.json
polymarket-execution-engine/scripts/: check_release_hygiene.py
polymarket-execution-engine/validation/: AGENTS.md  check_docs_evidence_governance.py  check_live_submit_guard.py  check_plan_storage.py  check_runtime_worker_models.py  check_sign_only_lifecycle.py  check_v0_23_evidence_manifest.py  check_v0_23_lifecycle_api.py  run_current_gates.sh  run_v0_23_gates.sh  write_v0_23_evidence_manifest.py
polymarket-execution-engine/validation/sql/: pg_advisory_lock_contention.sql  pg_repository_concurrency_check.sql
polymarket-execution-engine/validation/templates/: evidence_manifest.template.json
scripts/: activate_pmx_profile.py  active_docs.py  check_dist_index.py  check_docs_links.py  check_governance_controls.py  check_hermes_no_secrets.py  check_hermes_profile_plugin.py  check_release_artifact.py  check_release_provenance.py  check_supply_chain_preflight.py  check_v27_release_readiness.py  check_v28_production_live_candidate.py  (+37 more)
(+69 files in other folders)
