[workspace]
members = [
  "crates/pmx-core",
  "crates/pmx-policy",
  "crates/pmx-gateway",
  "crates/pmx-store",
  "crates/pmx-runtime",
  "crates/pmx-api",
  "crates/pmx-service",
  "crates/pmx-authz",
  "crates/pmx-release",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.23.0"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.7"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "1"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal", "time"] }
uuid = { version = "1.23.0", features = ["serde", "v4", "v7"] }
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
