[package]
name = "pmx-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
pmx-core = { path = "../pmx-core" }
pmx-authz = { path = "../pmx-authz" }
pmx-store = { path = "../pmx-store" }
pmx-service = { path = "../pmx-service" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
