[package]
name = "pmx-store"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
async-trait.workspace = true
serde_json.workspace = true
serde.workspace = true
pmx-core = { path = "../pmx-core" }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
thiserror.workspace = true
